# exif-thumbnail-adder

./: .gitignore  CMakeLists.txt  README.md  build.gradle  crowdin.yml  settings.gradle  version_last_tag.txt
.github/: FUNDING.yml
.github/workflows/: tests.yml
app/: build.gradle  get-version.gradle  git-version.gradle  gradle.properties  proguard-rules.pro
app/src/androidTest/java/com/exifthumbnailadder/app/: AddThumbs.java  AddThumbsCommon.java  DocUIStrings.java  ExampleInstrumentedTest.java  PermissionsTest.java  Repeat.java  RepeatRule.java  SettingsTest.java  TakeScreenshots.java  TestCommons.java  TestDataCollectionRule.java  TestDataCollectionUtils.java  TestUtil.java  zAddThumbs.java
app/src/debug/: AndroidManifest.xml
app/src/debug/res/drawable/: ic_exif_thumbnails_adder_debug.xml  ic_exif_thumbnails_adder_foreground_debug.xml
app/src/google_play/: AndroidManifest.xml
app/src/google_play/java/com/exifthumbnailadder/app/: PixymetaInterface.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Exiv2Helper.cpp  Exiv2Helper.h  exceptions.c  exceptions.h  ffmpeg_helper.c  libexif-helper.c  libexif-helper.h  tests.c  timestamp.c
app/src/main/java/com/exifthumbnailadder/app/: AboutActivity.java  AddThumbsFragment.java  AddThumbsLogLiveData.java  AddThumbsService.java  ETADoc.java  ETADocDf.java  ETADocFile.java  ETADocs.java  ETAExifInterface.java  ETAService.java  ETASrcDir.java  ETASrcDirFile.java  ETASrcDirUri.java  Exiv2ErrorException.java  Exiv2WarnException.java  FfmpegSwscaleService.java  FileUtil.java  FirstFragment.java  InputDirs.java  LastServiceLiveData.java  LibexifException.java  LibexifHelperException.java  LogLiveData.java  LogLiveDataSync.java  MainActivity.java  MainApplication.java  NativeLibHelper.java  PathUtil.java  PermissionManager.java  SecondFragment.java  ServiceUtil.java  SettingsActivity.java  SettingsFragment.java  SyncActivity.java  SyncFragment.java  SyncLogLiveData.java  SyncService.java  ThumbnailFactory.java  ThumbnailProject.java  UriUtil.java  (+1 more)
app/src/main/java/com/schokoladenbrown/: Smooth.java
app/src/main/res/drawable/: ic_exif_thumbnails_adder_foreground.xml  rounded_corner.xml
app/src/main/res/drawable-anydpi/: ic_add.xml  ic_notif_status_bar.xml
app/src/main/res/layout/: activity_about.xml  activity_main.xml  activity_settings.xml  activity_sync.xml  activity_working_dir_perm.xml  content_main.xml  delete_path_button.xml  fragment_add_thumbs.xml  fragment_first.xml  fragment_settings.xml  fragment_sync.xml  select_path_button.xml
app/src/main/res/menu/: bottom_nav_menu.xml  menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_exif_thumbnails_adder_round.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  ic_exif_thumbnails_adder_background.xml  strings.xml  themes.xml
app/src/main/res/values-ar-rSA/: arrays.xml
app/src/main/res/values-de-rDE/: arrays.xml  strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/main/res/values-fr/: arrays.xml  strings.xml
app/src/main/res/values-fr-rFR/: arrays.xml  strings.xml
app/src/main/res/values-iw-rIL/: strings.xml
app/src/main/res/values-ko-rKR/: arrays.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pt/: arrays.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-pt-rPT/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-tr-rTR/: arrays.xml  strings.xml
app/src/main/res/values-vi-rVN/: arrays.xml  strings.xml
app/src/main/res/values-zh-rCN/: arrays.xml  strings.xml
app/src/main/res/xml/: root_preferences.xml
app/src/pixymeta/java/com/exifthumbnailadder/app/: PixymetaInterface.java
cmake/: exif.cmake  exif_CMakeLists.cmake  exif_config.h.cmake  exiv2.cmake  expat.cmake  ffmpeg-win32.cmake  ffmpeg.cmake  ffmpeg_AndroidLog.patch  ffmpeg_Makefile.patch  ffmpeg_build_system.cmake  ffmpeg_copy_headers.cmake  libexif.cmake  libexif_CMakeLists.cmake  libexif_config.h.cmake
fastlane/: Appfile  Fastfile  README.md  report.xml
fastlane/metadata/android/: screenshots.html
fastlane/metadata/android/ca/: full_description.txt
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/: full_description.txt
fastlane/metadata/android/en-US/changelogs/: 118.txt  136.txt  146.txt  158.txt  164.txt  171.txt  181.txt  194.txt  201.txt  213.txt  232.txt  237.txt  247.txt  379.txt  381.txt  42.txt  5.txt  515.txt  536.txt  679.txt
fastlane/metadata/android/es-ES/: full_description.txt
fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt
fastlane/metadata/android/fr-FR/changelogs/: 118.txt  136.txt  146.txt  158.txt  164.txt  171.txt  181.txt  194.txt  201.txt  213.txt  42.txt  5.txt
fastlane/metadata/android/hi-IN/: full_description.txt
fastlane/metadata/android/it-IT/: short_description.txt
fastlane/metadata/android/pt-BR/: full_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt
fastlane/metadata/android/tr-TR/: full_description.txt  short_description.txt
fastlane/metadata/android/vi/: full_description.txt  title.txt
fastlane/metadata/android/vi-VN/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
gradle/wrapper/: gradle-wrapper.properties
libs.prebuilt/exif-0.6.22/include/: config.h
libs.prebuilt/exiv2-0.27.5/include/exiv2/: exiv2lib_export.h  exv_conf.h
libs.prebuilt/expat-2.3.0/include/: expat_config.h
scripts/: exiv2_for_diff.sh  post_metadata_for_googleplay.sh  prepare_metadata_for_googleplay.sh  prepare_release.sh  screenshots.sh  store_output_to_pic_repo.sh  tags_diff.sh  unzip_github_output_artifact.sh
tests/: .gitignore  check_diff_accross_api.sh  check_diff_accross_version.sh  check_logcat_match.sh  has_mandatory_tags.sh  is_same_picture.sh  mandatory_exif_tags.txt  replace_picture.sh  run_tests.sh
tests/data/: text_file.txt
(+16 files in other folders)
